[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Load_Page.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Saved_Projects.tscn" type="PackedScene" id=2]

[node name="Load_Page" type="Node2D"]
position = Vector2( 1024, 600 )
script = ExtResource( 1 )

[node name="Loaded_Project" type="Node2D" parent="."]
position = Vector2( -1024, -600 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 512, 300 )
current = true

[node name="BackPage" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 1.0
margin_top = 40.0
margin_right = 1025.0
margin_bottom = 215.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_top = 250.0
margin_right = 1024.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="Node2D" parent="."]

[node name="New_Saves" parent="Projects" instance=ExtResource( 2 )]
position = Vector2( 20, 65 )

[node name="Old_Projects" type="Node2D" parent="."]
position = Vector2( 20, 260 )

[node name="ScrollContainer" type="ScrollContainer" parent="Old_Projects"]
margin_right = 985.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Projects" type="Control" parent="Old_Projects/ScrollContainer"]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 120 )

[node name="Donation" type="Label" parent="."]
margin_left = 650.0
margin_top = 60.0
margin_right = 776.0
margin_bottom = 108.0
text = "Support this Project
by Donating at
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Website" type="Button" parent="."]
margin_left = 636.0
margin_top = 82.0
margin_right = 788.0
margin_bottom = 130.0
text = "https://mventusr.com"
flat = true

[node name="Donation2" type="Label" parent="."]
margin_left = 650.0
margin_top = 120.0
margin_right = 776.0
margin_bottom = 185.0
text = "or by Purchasing
Downloadable
Content
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Website" to="." method="_on_Website_pressed"]
